--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_auth_firebase">
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
+
    <application
+        android:usesCleartextTraffic="true"
         android:label="flutter_auth_firebase"
         android:icon="@mipmap/ic_launcher">
         <activity
